--- a/config.js.dist
+++ b/config.js.dist
@@ -3,9 +3,9 @@ var config = {};
 config.web = {};
 config.mail = {};
 
-config.web.path = 'http://fullpath/to/website'
+config.web.path = 'http://fullpath/to/website';
 
-config.mail.password = 'e-mail password'
-config.mail.user = 'e-mail login name'
+config.mail.password = 'e-mail password';
+config.mail.user = 'e-mail login name';
 
 module.exports = config;
